<?xml version="1.0"?>
<package format="2">
  <name>laserscan_to_pointcloud</name>
  <version>0.0.1</version>
  <description>Convert laserscan to arrays of x and y coordinates</description>


  <maintainer email="koiverik@gmail.com">Erik Kõiv</maintainer>


  <license>TODO</license>


  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>laser_assembler</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
